--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "lint:fix": "eslint src --fix && pnpm format",
     "lint:strict": "eslint --max-warnings=0 src",
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
-    "test:watch": "jest --watch",
-    "test": "jest",
+    "test:watch": "vitest",
+    "test": "vitest run",
     "e2e": "PORT=3030 playwright test --project=chromium",
     "e2e:dev": "PORT=3000 playwright test --project=chromium",
     "e2e:ci": "playwright test",
@@ -46,7 +46,8 @@
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006 --quiet",
     "build-storybook": "storybook build",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
@@ -114,7 +115,6 @@
   "devDependencies": {
     "@actions/core": "^1.10.1",
     "@chromatic-com/storybook": "^1.9.0",
-    "@jest/globals": "^29.7.0",
     "@playwright/test": "^1.47.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
@@ -125,16 +125,16 @@
     "@storybook/react": "^8.2.9",
     "@storybook/test": "^8.2.9",
     "@svgr/webpack": "^8.1.0",
-    "@swc/jest": "^0.2.37",
-    "@tailwindcss/forms": "^0.5.9",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
-    "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
     "@types/qs": "^6.9.15",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
@@ -144,9 +144,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "happy-dom": "^13.10.1",
     "husky": "^7.0.4",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^12.5.0",
     "next-router-mock": "^0.9.13",
     "next-sitemap": "^2.5.28",
@@ -156,8 +155,9 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "storybook": "^8.2.9",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
