better docker cache

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "docker:dev": "concurrently \"pnpm docker:dev:start\" \"pnpm prisma:watch\" --kill-others-on-fail --handle-input --raw",
-    "docker:dev:start": "docker-compose up --build --no-log-prefix --abort-on-container-exit",
+    "docker:dev:start": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose up --build --no-log-prefix --abort-on-container-exit",
     "docker:down": "docker-compose down",
     "docker:clean": "docker-compose down -v && docker volume prune -f",
     "docker:db": "docker-compose exec db psql -U admin -d apadana",
-    "docker:rebuild": "docker compose build --no-cache app && docker compose up --no-log-prefix",
+    "docker:rebuild": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker compose build --no-cache app && docker compose up --no-log-prefix",
     "docker:prune": "docker system prune -af --volumes",
-    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build --no-log-prefix",
+    "docker:prod": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose -f docker-compose.prod.yml up --build --no-log-prefix",
     "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
     "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f",
     "docker:prod:clean": "docker-compose -f docker-compose.prod.yml down -v",
-    "docker:prod:rebuild": "docker-compose -f docker-compose.prod.yml build app_prod && docker-compose -f docker-compose.prod.yml up -d app_prod",
+    "docker:prod:rebuild": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose -f docker-compose.prod.yml build app_prod && docker-compose -f docker-compose.prod.yml up -d app_prod",
     "predev": "pnpm prisma:generate && pnpm migrate:dev",
     "dev": "dotenv -e .env.local -- concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
     "dev:next": "next dev --turbo",
