--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,42 +1,27 @@
-# Build stage
-FROM node:22.11.0-slim 
+FROM node:22.11.0-slim AS base
 
-
-RUN apt-get update && apt-get install -y \
-  python3 \
-  make \
-  g++ \
-  && rm -rf /var/lib/apt/lists/*
-
+RUN apt-get update && apt-get install -y python3 make g++ && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
-
-# Install pnpm
 RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
-
-# Configure pnpm
-RUN pnpm config set update-notifier false
-RUN pnpm config set node-deprecation-warnings false
+ENV PNPM_HOME=/app/.pnpm-store
+ENV PATH="$PNPM_HOME:$PATH"
+RUN mkdir -p /app/.pnpm-store && pnpm config set update-notifier false && pnpm config set node-deprecation-warnings false
 ENV NODE_OPTIONS=--no-warnings
 
-# Setup pnpm cache
-RUN mkdir -p /app/.pnpm-store
-ENV PNPM_HOME=/app/.pnpm-store
+FROM base AS deps
+COPY pnpm-lock.yaml ./
+RUN --mount=type=cache,target=/app/.pnpm-store,sharing=locked pnpm fetch
+COPY package.json ./
+RUN --mount=type=cache,target=/app/.pnpm-store,sharing=locked pnpm install --frozen-lockfile --ignore-scripts
 
-# Copy package files first
-COPY package.json pnpm-lock.yaml ./
-
-# Install dependencies with named cache
-RUN --mount=type=cache,target=/app/.pnpm-store,id=pnpm-store \
-  pnpm install --frozen-lockfile --ignore-scripts
-
-# Copy source code
+FROM base AS build
+COPY --from=deps /app/node_modules /app/node_modules
 COPY . .
-
-# Disable Next.js telemetry
+RUN pnpm prisma:generate
 RUN pnpm exec next telemetry disable
+RUN --mount=type=cache,target=/app/.next/cache,sharing=locked pnpm build
 
-# Build with Next.js cache
-RUN --mount=type=cache,target=/app/.next/cache pnpm prisma:generate && pnpm build
+FROM base AS final
 
-# Expose port and start the application
+COPY --from=build /app /app
 EXPOSE 3030
