--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,7 +25,7 @@ services:
     command:
       - 'sh'
       - '-c'
-      - 'pnpm migrate:prod && pnpm dev:prisma:seed && pnpm build && pnpm start'
+      - 'pnpm migrate:prod && pnpm dev:prisma:seed && pnpm start'
 
     deploy:
       resources:
