First passing attempt

--- a/package.json
+++ b/package.json
@@ -3,54 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "script": "tsx src/bin/script.mts",
-    "docker:dev": "pnpm script docker dev",
-    "docker:dev:start": "pnpm script docker dev:start",
-    "docker:down": "pnpm script docker down",
-    "docker:clean": "docker-compose down -v && docker volume prune -f",
-    "docker:db": "docker-compose exec db psql -U admin -d apadana",
-    "docker:rebuild": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker compose build --no-cache app && docker compose up --no-log-prefix",
-    "docker:prune": "docker system prune -af --volumes",
-    "docker:prod": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose -f docker-compose.prod.yml up --build --no-log-prefix",
-    "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
-    "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f",
-    "docker:prod:clean": "docker-compose -f docker-compose.prod.yml down -v",
-    "docker:prod:rebuild": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose -f docker-compose.prod.yml build app_prod && docker-compose -f docker-compose.prod.yml up -d app_prod",
-    "predev": "pnpm prisma:generate && pnpm migrate:dev",
-    "dev": "dotenv -e .env.local -- concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
-    "dev:next": "next dev --turbo",
-    "dev:prisma": "dotenv -e .env.local -- prisma generate --no-hints --watch",
-    "dev:prisma:seed": "dotenv -e .env.local -- prisma db seed",
-    "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE '^(info|warn)'",
-    "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'dotenv -e .env -- prisma studio --browser none'",
-    "migrate:dev": "dotenv -e .env.local -- prisma migrate dev --name $(date +'%Y%m%d_%H%M%S')",
-    "migrate:prod": "prisma migrate deploy",
-    "prisma:generate": "dotenv -e .env.local -- prisma generate --no-hints",
-    "prisma:watch": "dotenv -e .env.local -- prisma generate --no-hints --watch",
-    "prisma:migrate:deploy": "prisma migrate deploy",
-    "build": "dotenv -e .env.local -- prisma generate --no-hints && dotenv -e .env.local -- next build",
-    "start": "next start",
-    "fix": "pnpm lint:fix && pnpm format",
-    "lint": "next lint",
-    "lint:fix": "eslint src --fix && pnpm format",
-    "lint:strict": "eslint --max-warnings=0 src",
-    "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
-    "test": "dotenv -e .env.test -- vitest run",
-    "test:watch": "dotenv -e .env.test -- vitest",
-    "test:coverage": "dotenv -e .env.test -- vitest run --coverage",
-    "e2e": "PORT=3030 playwright test --project=chromium",
-    "e2e:dev": "PORT=3000 PLAYWRIGHT_IS_TESTING_DEV=true playwright test --project=chromium",
-    "e2e:ci": "playwright test",
-    "e2e:prod": "BASE_URL=https://apadana.app playwright test --project=chromium",
-    "format": "prettier -w .",
-    "format:check": "prettier -c .",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "prepare": "husky install",
-    "storybook": "storybook dev -p 6006 --quiet",
-    "build-storybook": "storybook build",
-    "test:ui": "vitest --ui",
-    "test:cleanup": "docker-compose -f docker-compose.test.yml down",
-    "postinstall": "chmod +x src/bin/script.sh"
+    "script": "tsx src/lib/script-runner/runner.mts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
@@ -93,6 +46,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "dotenv-cli": "^7.4.4",
+    "glob": "^11.0.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
