--- a/scripts/prisma/script.yml
+++ b/scripts/prisma/script.yml
@@ -1,12 +1,14 @@
 generate:
   command: prisma generate --no-hints
   help: Generate Prisma client
-  envFile: .env.local
+  envFile:
+    - .env.local
 
 watch:
   command: prisma generate --no-hints --watch
   help: Watch and generate Prisma client
-  envFile: .env.local
+  envFile:
+    - .env.local
 
 deploy:
   command: prisma migrate deploy
