--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -17,11 +17,8 @@ RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
 # Install inotify-tools for file watching
 RUN apt-get update && apt-get install -y inotify-tools && rm -rf /var/lib/apt/lists/*
 
-# Setup pnpm cache
-RUN mkdir -p /app/.pnpm-store
-ENV PNPM_HOME=/app/.pnpm-store
-
-# Configure pnpm
+# Configure pnpm to use the store dir that will be volume mounted
+RUN pnpm config set store-dir /root/.pnpm-store
 RUN pnpm config set update-notifier false
 RUN pnpm config set node-deprecation-warnings false
 ENV NODE_OPTIONS=--no-warnings
@@ -29,9 +26,8 @@ ENV NODE_OPTIONS=--no-warnings
 # Copy package files
 COPY package.json pnpm-lock.yaml ./
 
-# Install dependencies with named cache
-RUN --mount=type=cache,target=/app/.pnpm-store,id=pnpm-store \
-  pnpm install --frozen-lockfile --ignore-scripts
+# Modified install command to work better with volumes
+RUN pnpm install --frozen-lockfile --ignore-scripts
 
 # Copy the rest of the application
 COPY . .
