--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apadana",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
-    "docker:dev": "concurrently \"pnpm docker:dev:start\" \"pnpm prisma:watch\" --kill-others-on-fail --handle-input --raw",
-    "docker:dev:start": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose up --build --no-log-prefix --abort-on-container-exit",
+    "docker:dev": "concurrently \"npm run docker:dev:start\" \"pnpm prisma:watch\" --kill-others-on-fail --handle-input --raw --signal SIGTERM",
+    "docker:dev:start": "docker compose up --build",
     "docker:down": "docker-compose down",
     "docker:clean": "docker-compose down -v && docker volume prune -f",
     "docker:db": "docker-compose exec db psql -U admin -d apadana",
@@ -22,10 +22,10 @@
     "dev:prisma:seed": "dotenv -e .env.local -- prisma db seed",
     "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE '^(info|warn)'",
     "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'dotenv -e .env -- prisma studio --browser none'",
-    "migrate:dev": "dotenv -e .env.local -- prisma migrate dev --name $(date +'%Y%m%d_%H%M%S')",
+    "migrate:dev": "dotenv -e .env.local -- prisma migrate deploy",
     "migrate:prod": "prisma migrate deploy",
     "prisma:generate": "dotenv -e .env.local -- prisma generate --no-hints",
-    "prisma:watch": "dotenv -e .env.local -- prisma generate --no-hints --watch",
+    "prisma:watch": "pnpm prisma generate --watch",
     "prisma:migrate:deploy": "prisma migrate deploy",
     "build": "dotenv -e .env.local -- prisma generate --no-hints && dotenv -e .env.local -- next build",
     "start": "next start",
@@ -64,6 +64,7 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
