--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,12 @@
         }
       ]
     }
-  ]
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "main": true,
+      "preview": true
+    }
+  },
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./"
 }
