--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "docker:dev": "concurrently \"npm run docker:dev:start\" \"pnpm prisma:watch\" --kill-others-on-fail --handle-input --raw --signal SIGTERM",
-    "docker:dev:start": "docker compose up --build",
+    "docker:dev": "docker-compose down && concurrently \"npm run docker:dev:start\" \"pnpm prisma:watch\" --kill-others-on-fail --handle-input --raw --signal SIGTERM",
+    "docker:dev:start": "docker compose up --build --no-log-prefix",
     "docker:down": "docker-compose down",
     "docker:clean": "docker-compose down -v && docker volume prune -f",
     "docker:db": "docker-compose exec db psql -U admin -d apadana",
@@ -106,6 +106,7 @@
     "react-stately": "^3.34.0",
     "resend": "^4.0.1",
     "slugify": "^1.6.6",
+    "strip-ansi": "^7.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
     "tailwindcss-animate": "^1.0.7",
