add missing env vars in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,8 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: apadana_test_ci
+          RESEND_API_KEY: fake_RESEND_API_KEY
+          GOOGLE_MAPS_API_KEY: fake_GOOGLE_MAPS_API_KEY
         ports:
           - 5432:5432
         options: >-
