--- a/src/docker/docker-compose.prod.yml
+++ b/src/docker/docker-compose.prod.yml
@@ -1,12 +1,12 @@
 services:
   app_prod:
     build:
-      context: .
-      dockerfile: Dockerfile.prod
+      context: ../..
+      dockerfile: src/docker/Dockerfile.prod
     ports:
       - '3030:3030'
     env_file:
-      - .env.local
+      - ../../.env.local
     environment:
       - PORT=3030
       - DATABASE_URL=postgresql://admin:admin@db_prod:5432/apadana
