Move more files around

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "docker:dev": "pnpm run docker:down && concurrently \"npm run docker:dev:start\" \"pnpm prisma:watch\" --kill-others-on-fail --raw --signal SIGTERM",
+    "docker:dev": "pnpm run docker:down && concurrently \"pnpm run docker:dev:start\" \"pnpm run prisma:watch\" --kill-others --success=first --raw",
     "docker:dev:start": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker compose -f src/docker/docker-compose.dev.yml up --build --no-log-prefix",
     "docker:down": "docker-compose -f src/docker/docker-compose.dev.yml down",
     "docker:clean": "docker-compose -f src/docker/docker-compose.dev.yml down -v && docker volume prune -f",
@@ -18,37 +18,37 @@
     "predev": "pnpm prisma:generate && pnpm migrate:dev",
     "dev": "dotenv -e .env.local -- concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
     "dev:next": "next dev --turbo",
-    "dev:prisma": "dotenv -e .env.local -- prisma generate --no-hints --watch",
+    "dev:prisma": "dotenv -e .env.local -- prisma generate --schema=src/prisma/schema.prisma --no-hints --watch",
     "dev:prisma:seed": "dotenv -e .env.local -- prisma db seed",
-    "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE '^(info|warn)'",
-    "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'dotenv -e .env -- prisma studio --browser none'",
-    "migrate:dev": "dotenv -e .env.local -- prisma migrate deploy",
-    "migrate:prod": "prisma migrate deploy",
-    "prisma:generate": "dotenv -e .env.local -- prisma generate --no-hints",
-    "prisma:watch": "pnpm prisma generate --watch",
-    "prisma:migrate:deploy": "prisma migrate deploy",
-    "build": "dotenv -e .env.local -- prisma generate --no-hints && dotenv -e .env.local -- next build",
+    "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE 'info|warn' | grep -v '^$'",
+    "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'dotenv -e .env -- prisma studio --schema=src/prisma/schema.prisma --browser none'",
+    "migrate:dev": "dotenv -e .env.local -- prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "migrate:prod": "prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "prisma:generate": "dotenv -e .env.local -- prisma generate --schema=src/prisma/schema.prisma --no-hints",
+    "prisma:watch": "pnpm prisma generate --schema=src/prisma/schema.prisma --watch",
+    "prisma:migrate:deploy": "prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "build": "dotenv -e .env.local -- prisma generate --schema=src/prisma/schema.prisma --no-hints && dotenv -e .env.local -- next build",
     "start": "next start",
     "fix": "pnpm lint:fix && pnpm format",
-    "lint": "next lint",
-    "lint:fix": "eslint src --fix && pnpm format",
-    "lint:strict": "eslint --max-warnings=0 src",
+    "lint": "eslint src --config=config/eslint.config.js",
+    "lint:fix": "eslint src --fix --config=config/eslint.config.js && pnpm format",
+    "lint:strict": "eslint --max-warnings=0 --config=config/eslint.config.js src",
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
-    "test": "dotenv -e .env.test -- vitest run",
-    "test:watch": "dotenv -e .env.test -- vitest",
-    "test:coverage": "dotenv -e .env.test -- vitest run --coverage",
-    "e2e": "PORT=3030 playwright test --project=chromium",
-    "e2e:dev": "PORT=3000 PLAYWRIGHT_IS_TESTING_DEV=true playwright test --project=chromium",
-    "e2e:ci": "playwright test",
-    "e2e:prod": "BASE_URL=https://apadana.app playwright test --project=chromium",
+    "test": "dotenv -e .env.test -- vitest run --config=config/vitest.config.ts",
+    "test:watch": "dotenv -e .env.test -- vitest --config=config/vitest.config.ts",
+    "test:coverage": "dotenv -e .env.test -- vitest run --coverage --config=config/vitest.config.ts",
+    "test:ui": "vitest --ui --config=config/vitest.config.ts",
+    "e2e": "PORT=3030 playwright test --project=chromium --config=src/e2e/playwright.config.ts",
+    "e2e:dev": "PORT=3000 PLAYWRIGHT_IS_TESTING_DEV=true playwright test --project=chromium --config=src/e2e/playwright.config.ts",
+    "e2e:ci": "playwright test --config=src/e2e/playwright.config.ts",
+    "e2e:prod": "BASE_URL=https://apadana.app playwright test --project=chromium --config=src/e2e/playwright.config.ts",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
+    "postbuild": "next-sitemap --config config/next-sitemap.config.js",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006 --quiet",
     "build-storybook": "storybook build",
-    "test:ui": "vitest --ui",
-    "test:cleanup": "docker-compose -f docker-compose.test.yml down"
+    "test:cleanup": "docker-compose -f src/docker/docker-compose.test.yml down"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
@@ -168,7 +168,7 @@
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "pnpm prisma:generate",
-      "eslint --max-warnings=0",
+      "eslint --max-warnings=0 --config=config/eslint.config.js",
       "prettier -w"
     ],
     "**/*.{json,css,scss,md,webmanifest}": [
@@ -182,11 +182,13 @@
     }
   },
   "prisma": {
-    "seed": "tsx --env-file .env.local prisma/seed.ts"
+    "seed": "tsx --env-file .env.local src/prisma/seed.ts"
   },
   "postcss": {
     "plugins": {
-      "tailwindcss": {},
+      "tailwindcss": {
+        "config": "config/tailwind.config.ts"
+      },
       "autoprefixer": {}
     }
   },
