--- a/src/docker/Dockerfile.prod
+++ b/src/docker/Dockerfile.prod
@@ -3,25 +3,31 @@ FROM node:22.11.0-slim AS base
 RUN apt-get update && apt-get install -y python3 make g++ && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
-ENV PNPM_HOME=/app/.pnpm-store
-ENV PATH="$PNPM_HOME:$PATH"
-RUN mkdir -p /app/.pnpm-store && pnpm config set update-notifier false && pnpm config set node-deprecation-warnings false
+
+# Configure pnpm with cache directory in /home/node
+RUN pnpm config set store-dir /home/node/.pnpm-store \
+  && pnpm config set update-notifier false \
+  && pnpm config set node-deprecation-warnings false
 ENV NODE_OPTIONS=--no-warnings
 
 FROM base AS deps
+
+# Fetch dependencies first (caching based solely on pnpm-lock.yaml)
 COPY pnpm-lock.yaml ./
-RUN --mount=type=cache,target=/app/.pnpm-store,sharing=locked pnpm fetch
+RUN --mount=type=cache,target=/home/node/.pnpm-store pnpm fetch
+
+# Now copy package.json and install
 COPY package.json ./
-RUN --mount=type=cache,target=/app/.pnpm-store,sharing=locked pnpm install --frozen-lockfile --ignore-scripts
+RUN --mount=type=cache,target=/home/node/.pnpm-store pnpm install --frozen-lockfile --offline
 
 FROM base AS build
 COPY --from=deps /app/node_modules /app/node_modules
 COPY . .
-RUN pnpm prisma:generate
+# Use cache mount for Prisma and Next.js
+RUN --mount=type=cache,target=/app/.next/cache pnpm prisma:generate
 RUN pnpm exec next telemetry disable
-RUN --mount=type=cache,target=/app/.next/cache,sharing=locked pnpm build
+RUN --mount=type=cache,target=/app/.next/cache pnpm build
 
 FROM base AS final
-
 COPY --from=build /app /app
 EXPOSE 3030
