--- a/src/docker/docker-compose.dev.yml
+++ b/src/docker/docker-compose.dev.yml
@@ -9,7 +9,11 @@ services:
       - '5555:5555'
     volumes:
       - ../../src:/app/src
+      - ../../public:/app/public
       - ../../prisma:/app/prisma
+      - ../../config:/app/config
+      - ../../package.json:/app/package.json
+      - ../../pnpm-lock.yaml:/app/pnpm-lock.yaml
       - app_node_modules:/app/node_modules
       - pnpm_store:/root/.pnpm-store
       - next_cache:/app/.next
