--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "prisma/**/*.ts"
+    "src/prisma/**/*.ts"
   ],
   "exclude": ["node_modules", ".next"],
   "moduleResolution": ["node_modules", ".next", "node"]
